Kubernetes/K8s Deployment Types/Canary_Deployment/stable_version/demo-stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-stable
  namespace: canary
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo
      track: stable
  template:
    metadata:
      labels:
        app: demo
        track: stable
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
        - "-text=🔵 STABLE VERSION"
        ports:
        - containerPort: 5678
