Kubernetes/K8s Deployment Types/Canary_Deployment/stable_version/demo-stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stable-svc
  namespace: canary
spec:
  selector:
    app: demo
    track: stable
  ports:
    - port: 80
      targetPort: 5678
